--- a/front/.eslintrc
+++ b/front/.eslintrc
@@ -33,6 +33,7 @@
         "arrow-body-style": "off",
         "react/jsx-props-no-spreading": "off",
         "object-property-newline": "off",
-        "camelcase": "off"
+        "camelcase": "off",
+        "no-case-declarations": "off"
     }
 }
