--- a/back/package.json
+++ b/back/package.json
@@ -10,25 +10,25 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-eslint": "10.1.0",
-    "bcrypt": "5.0.0",
-    "cookie-parser": "1.4.5",
-    "cors": "2.8.5",
-    "dotenv": "8.2.0",
-    "express": "4.17.1",
-    "express-session": "1.17.1",
-    "multer": "1.4.2",
-    "mysql2": "2.1.0",
-    "passport": "0.4.1",
-    "passport-local": "1.0.0",
-    "sequelize": "6.2.4",
-    "sequelize-cli": "6.1.0"
+    "babel-eslint": "^10.1.0",
+    "bcrypt": "^5.0.0",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "multer": "^1.4.2",
+    "mysql2": "^2.1.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "sequelize": "^6.2.4",
+    "sequelize-cli": "^6.1.0"
   },
   "devDependencies": {
-    "eslint": "7.4.0",
-    "eslint-config-airbnb": "18.2.0",
-    "eslint-plugin-jsx-a11y": "6.3.1",
-    "morgan": "1.10.0",
-    "nodemon": "2.0.4"
+    "eslint": "^7.4.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.4"
   }
 }
