--- a/front/package.json
+++ b/front/package.json
@@ -4,17 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "next"
+    "dev": "next -p 3000",
+    "build": "cross-env ANALYZE=true NODE_ENV=production next build",
+    "start": "cross-env NODE_ENV=production next start -p 3000"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@ant-design/icons": "^4.2.1",
+    "@next/bundle-analyzer": "9.5.1",
     "antd": "^4.4.0",
     "axios": "^0.19.2",
+    "babel-plugin-styled-components": "^1.11.1",
+    "compression-webpack-plugin": "4.0.0",
+    "cross-env": "7.0.2",
     "faker": "^4.1.0",
     "immer": "^7.0.5",
+    "moment": "2.27.0",
     "next": "^9.4.4",
     "next-redux-wrapper": "^6.0.2",
     "prop-types": "^15.7.2",
@@ -27,7 +34,8 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.3",
     "shortid": "^2.2.15",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "swr": "^0.3.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
