--- a/back/package.json
+++ b/back/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon",
-    "start": "node app"
+    "start": "cross-env NODE_ENV=production pm2 start app"
   },
   "keywords": [],
   "author": "",
@@ -15,13 +15,17 @@
     "bcrypt": "^5.0.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "cross-env": "7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "helmet": "4.0.0",
+    "hpp": "0.2.3",
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "pm2": "4.4.0",
     "sequelize": "^6.2.4",
     "sequelize-cli": "^6.1.0"
   },
