--- a/back/package.json
+++ b/back/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "2.738.0",
     "babel-eslint": "^10.1.0",
     "bcrypt": "^5.0.0",
     "cookie-parser": "^1.4.5",
@@ -22,6 +23,7 @@
     "helmet": "4.0.0",
     "hpp": "0.2.3",
     "multer": "^1.4.2",
+    "multer-s3": "2.9.0",
     "mysql2": "^2.1.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
